// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Delivery Boy
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="name"
        onChange={[MockFunction]}
        type="text"
        value="Lova Katari"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="managerId"
    >
      Manager
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="managerId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Manager
        </option>
        <option
          value={1}
        >
          Lova
        </option>
        <option
          value={2}
        >
          Lakshmi
        </option>
        <option
          value={3}
        >
          Satyanarayana
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="category"
    >
      Category
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="category"
        onChange={[MockFunction]}
        type="text"
        value="Short DIstance Traveller"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving... when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Delivery Boy
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="name"
        onChange={[MockFunction]}
        type="text"
        value="Lova Katari"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="managerId"
    >
      Manager
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="managerId"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Manager
        </option>
        <option
          value={1}
        >
          Lova
        </option>
        <option
          value={2}
        >
          Lakshmi
        </option>
        <option
          value={3}
        >
          Satyanarayana
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="category"
    >
      Category
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="category"
        onChange={[MockFunction]}
        type="text"
        value="Short DIstance Traveller"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
